# dart_object_extension

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  READEME.md  README.md  analysis_options.yaml  build.yaml  pubspec.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: commit.md  release.md  version-check.md
dart_object_extension/: 01-build_runner.sh  CHANGELOG.md  README.md  pubspec.yaml
dart_object_extension/example/: 01-build_runner.sh  analysis_options.yaml  pubspec.yaml
dart_object_extension/example/lib/: main.dart
dart_object_extension/example/lib/models/: animal.dart  animal.g.dart  parent.dart  person.dart  person.g.dart  person_generic.dart  person_generic.g.dart
dart_object_extension/lib/: dart_object_extension.dart
dart_object_extension_gen/: CHANGELOG.md  README.md  build.yaml  pubspec.yaml
dart_object_extension_gen/lib/: dart_object_extension_gen.dart
dart_object_extension_gen/lib/src/: builder.dart
dart_object_extension_gen/lib/src/define/: copy_with.dart  copy_with_annotation.dart
dart_object_extension_gen/test/objects/: person.dart
example/: pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
lib/: dart_object_extension.dart
lib/src/: builder.dart
scripts/: publish.py  sync_version.py
test/: dart_object_extension_test.dart
test/objects/: person.dart  person.g.dart
